added header html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hi there</h1>
+    <!-- Header section -->
+    <header class="primary-header">
+      <!-- Header logo -->
+      <div class="container">
+        <a href="#"><img src="images/logo.svg" alt="Manage"></a>
+        <!-- Header nav -->
+        <nav class="primary-navigation">
+          <ul role="list" class="nav-list">
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Product</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Career</a></li>
+            <li><a href="#">Community</a></li>
+          </ul>
+        </nav>
+        <!-- Header button -->
+        <button class="button">Get Started</button>
+      </div>
+    </header>
+    
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
