added main sections and footer on index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#"><img src="images/logo.svg" alt="Manage"></a>
         <!-- Header nav -->
         <nav class="primary-navigation">
-          <ul role="list" class="nav-list">
+          <ul role="list" class="nav-list" aria-label="primary">
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Product</a></li>
             <li><a href="#">About Us</a></li>
@@ -30,8 +30,117 @@
         <button class="button">Get Started</button>
       </div>
     </header>
-    
 
+    <!-- Main section -->
+    <main>
+      <!-- Main's first section -->
+      <section>
+        <div class="container">
+          <div class="even-cols">
+            <div>
+              <h1 class="fs-primary-heading fw-bold">Bring everyone together to build better products.</h1>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem dignissimos minus assumenda neque velit molestiae aliquam sequi quia cupiditate animi!</p>
+              <button class="button"></button>
+            </div>
+            <div>
+              <img src="images/illustration-intro.svg" alt="Graphs">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Main's second section -->
+      <section>
+        <div class="container">
+          <div class="even-cols">
+            <div>
+              <h2 class="fs-secondary-heading fw-bold">What's diffrent about Manage?</h2>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod impedit culpa dolores ea esse corporis molestias quas, sit velit omnis!</p>
+            </div>
+            <div>
+              <ul role="list" class="numbered-items">
+                <li>
+                  <h3 class="fs-600 fw-bold">
+                    Track company-wid progress
+                  </h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
+                  </p>
+                </li>
+                <li>
+                  <h3 class="fs-600 fw-bold">
+                    Advanced biuld-in reports
+                  </h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
+                  </p>
+                </li>
+                <li>
+                  <h3 class="fs-600 fw-bold">
+                    Everything you need in one place
+                  </h3>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Carousel section  -->
+      <section class="carousel">
+        <h2 class="fs-secondary-heading">
+          What they've said
+        </h2>
+        <button class="button">Get Started</button>
+      </section>
+      <!-- last section  -->
+      <section class="bg-primary-400 text-neutral-100 cta">
+        <div class="container">
+          <div class="even-cols">
+            <h2 class="fs-secondary-heading fw-semi-bold">Simplify how your team works today</h2>
+          </div>
+          <div><button class="button">Get Started</button></div>
+        </div>
+      </section>
+    </main>
+    <!-- footer -->
+    <footer class="bg-neutral-900 text-neutral-100">
+      <div class="container">
+        <div class="even-cols">
+          <div>
+            <a href="#"><img src="images/logo.svg" alt="Manage"></a>
+            <ul role="list" aria-label="socials">
+              <li><a href="#" aria-label="facebook"><img src="images/icon-facebook.svg" alt=""></a></li>
+              <li><a href="#" aria-label="youtube"><img src="images/icon-youtube.svg" alt=""></a></li>
+              <li><a href="#" aria-label="twitter"><img src="images/icon-twitter.svg" alt=""></a></li>
+              <li><a href="#" aria-label="pinterest"><img src="images/icon-pinterest.svg" alt=""></a></li>
+              <li><a href="#" aria-label="instagram"><img src="images/icon-instagram.svg" alt=""></a></li>
+            </ul>
+          </div>
+          <div>
+            <nav class="footer-nav">
+              <ul role="list" aria-label="footer">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Product</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Career</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <form action="" method="get">
+              <input type="email">
+              <button class="button">Go</button>
+            </form>
+            <p>Copyright©</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
