--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <!-- Main section -->
     <main>
       <!-- Main's first section -->
-      <section>
+      <section class="padding-block-900">
         <div class="container">
           <div class="even-cols">
             <div>
               <h1 class="fs-primary-heading fw-bold">Bring everyone together to build better products.</h1>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem dignissimos minus assumenda neque velit molestiae aliquam sequi quia cupiditate animi!</p>
-              <button class="button"></button>
+              <button class="button">Get Started</button>
             </div>
             <div>
               <img src="images/illustration-intro.svg" alt="Graphs">
@@ -49,11 +49,11 @@
         </div>
       </section>
       <!-- Main's second section -->
-      <section>
+      <section class="padding-block-900">
         <div class="container">
           <div class="even-cols">
             <div>
-              <h2 class="fs-secondary-heading fw-bold">What's diffrent about Manage?</h2>
+              <h2 class="fs-secondary-heading fw-bold fw-bold">What's diffrent about Manage?</h2>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod impedit culpa dolores ea esse corporis molestias quas, sit velit omnis!</p>
             </div>
             <div>
@@ -88,24 +88,24 @@
         </div>
       </section>
       <!-- Carousel section  -->
-      <section class="carousel">
+      <section class="carousel padding-block-700">
         <h2 class="fs-secondary-heading">
           What they've said
         </h2>
         <button class="button">Get Started</button>
       </section>
       <!-- last section  -->
-      <section class="bg-primary-400 text-neutral-100 cta">
+      <section class="bg-accent-400 text-neutral-100 padding-block-700 cta">
         <div class="container">
           <div class="even-cols">
             <h2 class="fs-secondary-heading fw-semi-bold">Simplify how your team works today</h2>
           </div>
-          <div><button class="button">Get Started</button></div>
+          <div><button class="button" data-type="inverted">Get Started</button></div>
         </div>
       </section>
     </main>
     <!-- footer -->
-    <footer class="bg-neutral-900 text-neutral-100">
+    <footer class="bg-neutral-900 text-neutral-100 padding-block-700">
       <div class="container">
         <div class="even-cols">
           <div>
