added header styles

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
           </nav>
           <!-- Header button -->
-          <button class="button" style="display: none;">Get Started</button>
+          <button class="button sm-none md-inline-flex">Get Started</button>
         </div>
       </div>
     </header>
