added some styles

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
     <!-- Main section -->
     <main>
-      <!-- Main's first section -->
+      <!-- first section -->
       <section class="padding-block-900">
         <div class="container">
           <div class="even-cols">
-            <div>
+            <div class="flow">
               <h1 class="fs-primary-heading fw-bold">Bring everyone together to build better products.</h1>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem dignissimos minus assumenda neque velit molestiae aliquam sequi quia cupiditate animi!</p>
               <button class="button">Get Started</button>
@@ -55,39 +55,45 @@
           </div>
         </div>
       </section>
-      <!-- Main's second section -->
+      <!-- second section -->
       <section class="padding-block-900">
         <div class="container">
           <div class="even-cols">
-            <div>
+            <div class="flow">
               <h2 class="fs-secondary-heading fw-bold fw-bold">What's diffrent about Manage?</h2>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod impedit culpa dolores ea esse corporis molestias quas, sit velit omnis!</p>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod impedit culpa dolores ea esse corporis molestias quas, sit velit omnis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis, recusandae?</p>
             </div>
             <div>
-              <ul role="list" class="numbered-items">
+              <ul role="list" class="numbered-items flow">
                 <li>
-                  <h3 class="fs-600 fw-bold">
-                    Track company-wid progress
-                  </h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
-                  </p>
+                  <div class="flow" style="--flow-spacer: 1em;">
+                    <h3 class="fs-600 fw-bold">
+                      Track company-wid progress
+                    </h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
+                    </p>
+                  </div>
                 </li>
                 <li>
-                  <h3 class="fs-600 fw-bold">
-                    Advanced biuld-in reports
-                  </h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
-                  </p>
+                  <div class="flow" style="--flow-spacer: 1em;">
+                   <h3 class="fs-600 fw-bold">
+                     Advanced biuld-in reports
+                   </h3>
+                    <p>
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
+                   </p>
+                  </div>
                 </li>
                 <li>
-                  <h3 class="fs-600 fw-bold">
-                    Everything you need in one place
-                  </h3>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
-                  </p>
+                  <div class="flow" style="--flow-spacer: 1em;">
+                    <h3 class="fs-600 fw-bold">
+                     Everything you need in one place
+                   </h3>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
+                    </p>
+                  </div>
                 </li>
               </ul>
             </div>
