fixed some bugs on nav button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <!-- Header nav -->
           <button class="mobile-nav-button" aria-controls="primary-nav" aria-expanded="false">
             <img class="icon-ham" src="images/icon-hamburger.svg" alt="" aria-hidden="true">
-            <img class="icon-close" src="images/icon-close.svg" alt="" aria-hidden="true">
+            <img class="icon-close hidden" src="images/icon-close.svg" alt="" aria-hidden="true">
             <span class="hidden">Menu</span>
           </button>
           <nav class="primary-navigation">
