--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <h3 class="fs-600 fw-bold">
                       Track company-wid progress
                     </h3>
-                    <p>
+                    <p data-width="wide">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
                     </p>
                   </div>
@@ -80,7 +80,7 @@
                    <h3 class="fs-600 fw-bold">
                      Advanced biuld-in reports
                    </h3>
-                    <p>
+                    <p data-width="wide">
                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
                    </p>
                   </div>
@@ -90,7 +90,7 @@
                     <h3 class="fs-600 fw-bold">
                      Everything you need in one place
                    </h3>
-                    <p>
+                    <p data-width="wide">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
                     </p>
                   </div>
@@ -133,7 +133,7 @@
           </div>
           <div>
             <nav class="footer-nav">
-              <ul role="list" aria-label="footer">
+              <ul class="flow" style="--flow-spacer: 1em;" role="list" aria-label="footer">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Product</a></li>
