--- a/index.html
+++ b/index.html
@@ -110,10 +110,12 @@
       <!-- last section  -->
       <section class="bg-accent-400 text-neutral-100 padding-block-700 cta">
         <div class="container">
-          <div class="even-cols">
+          <div class="even-cols vertical-align-center">
             <h2 class="fs-secondary-heading fw-semi-bold">Simplify how your team works today</h2>
+            <div>
+              <button class="button push-right" data-type="inverted">Get Started</button>
+            </div>
           </div>
-          <div><button class="button" data-type="inverted">Get Started</button></div>
         </div>
       </section>
     </main>
