finished last section part

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
       <section class="bg-accent-400 text-neutral-100 padding-block-700 cta">
         <div class="container">
           <div class="even-cols vertical-align-center">
-            <h2 class="fs-secondary-heading fw-semi-bold">Simplify how your team works today</h2>
-            <div>
-              <button class="button push-right" data-type="inverted">Get Started</button>
+            <h2 class="fs-primary-heading fw-semi-bold">Simplify how your team works today</h2>
+            <div class="justify-self">
+              <button class="button" data-type="inverted">Get Started</button>
             </div>
           </div>
         </div>
