some changes on footer

--- a/index.html
+++ b/index.html
@@ -124,13 +124,14 @@
       <div class="container">
         <div class="even-cols">
           <div>
+
             <a href="#"><img src="images/logo.svg" alt="Manage"></a>
-            <ul role="list" aria-label="socials">
-              <li><a href="#" aria-label="facebook"><img src="images/icon-facebook.svg" alt=""></a></li>
-              <li><a href="#" aria-label="youtube"><img src="images/icon-youtube.svg" alt=""></a></li>
-              <li><a href="#" aria-label="twitter"><img src="images/icon-twitter.svg" alt=""></a></li>
-              <li><a href="#" aria-label="pinterest"><img src="images/icon-pinterest.svg" alt=""></a></li>
-              <li><a href="#" aria-label="instagram"><img src="images/icon-instagram.svg" alt=""></a></li>
+            <ul class="social-list" role="list" aria-label="socials">
+              <li><a href="#" aria-label="facebook"><img class="social-icons" src="images/icon-facebook.svg" alt=""></a></li>
+              <li><a href="#" aria-label="youtube"><img class="social-icons" src="images/icon-youtube.svg" alt=""></a></li>
+              <li><a href="#" aria-label="twitter"><img class="social-icons" src="images/icon-twitter.svg" alt=""></a></li>
+              <li><a href="#" aria-label="pinterest"><img class="social-icons" src="images/icon-pinterest.svg" alt=""></a></li>
+              <li><a href="#" aria-label="instagram"><img class="social-icons" src="images/icon-instagram.svg" alt=""></a></li>
             </ul>
           </div>
           <div>
