working on footer

--- a/index.html
+++ b/index.html
@@ -120,34 +120,35 @@
       </section>
     </main>
     <!-- footer -->
-    <footer class="bg-neutral-900 text-neutral-100 padding-block-700">
+    <footer class="primary-footer-nav bg-neutral-900 text-neutral-100 padding-block-700">
       <div class="container">
         <div class="even-cols">
-          <div>
-
-            <a href="#"><img src="images/logo.svg" alt="Manage"></a>
-            <ul class="social-list" role="list" aria-label="socials">
-              <li><a href="#" aria-label="facebook"><img class="social-icons" src="images/icon-facebook.svg" alt=""></a></li>
-              <li><a href="#" aria-label="youtube"><img class="social-icons" src="images/icon-youtube.svg" alt=""></a></li>
-              <li><a href="#" aria-label="twitter"><img class="social-icons" src="images/icon-twitter.svg" alt=""></a></li>
-              <li><a href="#" aria-label="pinterest"><img class="social-icons" src="images/icon-pinterest.svg" alt=""></a></li>
-              <li><a href="#" aria-label="instagram"><img class="social-icons" src="images/icon-instagram.svg" alt=""></a></li>
+          <div class=" left-auto space-bet">
+            <a class="justify-center" href="#"><img src="images/logo.svg" alt="Manage"></a>
+            <ul class="social-list justify-center" role="list" aria-label="socials">
+              <li class="social-icons"><a href="#" aria-label="facebook"><img class="social-icons" src="images/icon-facebook.svg" alt=""></a></li>
+              <li class="social-icons"><a href="#" aria-label="youtube"><img class="social-icons" src="images/icon-youtube.svg" alt=""></a></li>
+              <li class="social-icons"><a href="#" aria-label="twitter"><img class="social-icons" src="images/icon-twitter.svg" alt=""></a></li>
+              <li class="social-icons"><a href="#" aria-label="pinterest"><img class="social-icons" src="images/icon-pinterest.svg" alt=""></a></li>
+              <li class="social-icons"><a href="#" aria-label="instagram"><img class="social-icons" src="images/icon-instagram.svg" alt=""></a></li>
             </ul>
           </div>
           <div>
-            <nav class="footer-nav">
-              <ul class="flow" style="--flow-spacer: 1em;" role="list" aria-label="footer">
+            <nav class="footer-nav justify-center">
+              <ul style="--flow-spacer: 1em;" role="list" aria-label="footer">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Product</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#">About Us</a></li>   
+              </ul>
+              <ul style="--flow-spacer: 1em;" role="list" aria-label="footer">
                 <li><a href="#">Career</a></li>
                 <li><a href="#">Community</a></li>
                 <li><a href="#">Privacy Policy</a></li>
               </ul>
             </nav>
           </div>
-          <div>
+          <div class="justify-center flex-column-end">
             <form action="" method="get">
               <input type="email">
               <button class="button">Go</button>
