footer has finished

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <footer class="primary-footer-nav bg-neutral-900 text-neutral-100 padding-block-700">
       <div class="container">
         <div class="even-cols">
-          <div class=" left-auto space-bet">
+          <div class="left-auto space-bet">
             <a class="justify-center" href="#"><img src="images/logo.svg" alt="Manage"></a>
             <ul class="social-list justify-center" role="list" aria-label="socials">
               <li class="social-icons"><a href="#" aria-label="facebook"><img class="social-icons" src="images/icon-facebook.svg" alt=""></a></li>
@@ -148,12 +148,52 @@
               </ul>
             </nav>
           </div>
-          <div class="justify-center flex-column-end">
-            <form action="" method="get">
-              <input type="email">
+          <div class="space-bet justify-center flex-column-end">
+            <form class="form" action="" method="get">
+              <input type="email" placeholder="Update in your inbox...">
               <button class="button">Go</button>
             </form>
-            <p>Copyright©</p>
+            <p class="last-area">Copyright©</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <footer class="secondary-footer-nav bg-neutral-900 text-neutral-100 padding-block-700">
+      <div class="container">
+        <div class="even-cols">
+          <div class="justify-center flex-column-end">
+            <form class="form first-area" action="" method="get">
+              <input type="email" placeholder="Update in your inbox...">
+              <button class="button">Go</button>
+            </form>
+          </div>
+          <div>
+            <nav class="second-area footer-nav justify-center">
+              <ul style="--flow-spacer: 1em;" role="list" aria-label="footer">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Product</a></li>
+                <li><a href="#">About Us</a></li>   
+              </ul>
+              <ul style="--flow-spacer: 1em;" role="list" aria-label="footer">
+                <li><a href="#">Career</a></li>
+                <li><a href="#">Community</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="fourth-area left-auto space-bet">
+            <ul class="third-area social-list justify-center" role="list" aria-label="socials">
+              <li class="social-icons"><a href="#" aria-label="facebook"><img class="social-icons" src="images/icon-facebook.svg" alt=""></a></li>
+              <li class="social-icons"><a href="#" aria-label="youtube"><img class="social-icons" src="images/icon-youtube.svg" alt=""></a></li>
+              <li class="social-icons"><a href="#" aria-label="twitter"><img class="social-icons" src="images/icon-twitter.svg" alt=""></a></li>
+              <li class="social-icons"><a href="#" aria-label="pinterest"><img class="social-icons" src="images/icon-pinterest.svg" alt=""></a></li>
+              <li class="social-icons"><a href="#" aria-label="instagram"><img class="social-icons" src="images/icon-instagram.svg" alt=""></a></li>
+            </ul>
+            <a class="justify-center" href="#"><img src="images/logo.svg" alt="Manage"></a>
+          </div>
+          <div class="space-bet flex-column-end">      
+            <p class="last-area">Copyright©</p>
           </div>
         </div>
       </div>
