--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
             <div class="flow">
               <h1 class="fs-primary-heading fw-bold">Bring everyone together to build better products.</h1>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem dignissimos minus assumenda neque velit molestiae aliquam sequi quia cupiditate animi!</p>
-              <button class="button">Get Started</button>
+              <div class="button-center">
+                <button class="button">Get Started</button>
+              </div>
             </div>
             <div>
               <img src="images/illustration-intro.svg" alt="Graphs">
@@ -63,14 +65,14 @@
               <h2 class="fs-secondary-heading fw-bold fw-bold">What's diffrent about Manage?</h2>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod impedit culpa dolores ea esse corporis molestias quas, sit velit omnis! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis, recusandae?</p>
             </div>
-            <div>
-              <ul role="list" class="numbered-items flow">
+            <div class="numbered-items">
+              <ul role="list" class="flow">
                 <li>
                   <div class="flow" style="--flow-spacer: 1em;">
                     <h3 class="fs-600 fw-bold">
                       Track company-wid progress
                     </h3>
-                    <p data-width="wide">
+                    <p data-width="wide" style="text-align: start;">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
                     </p>
                   </div>
@@ -80,7 +82,7 @@
                    <h3 class="fs-600 fw-bold">
                      Advanced biuld-in reports
                    </h3>
-                    <p data-width="wide">
+                    <p data-width="wide" style="text-align: start;">
                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
                    </p>
                   </div>
@@ -90,7 +92,7 @@
                     <h3 class="fs-600 fw-bold">
                      Everything you need in one place
                    </h3>
-                    <p data-width="wide">
+                    <p data-width="wide" style="text-align: start;">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates earum nam et velit officiis quibusdam, molestiae voluptas asperiores voluptatum! Necessitatibus tempore magnam esse praesentium cupiditate?
                     </p>
                   </div>
@@ -105,7 +107,9 @@
         <h2 class="fs-secondary-heading">
           What they've said
         </h2>
-        <button class="button">Get Started</button>
+        <div class="button-center">
+          <button class="button">Get Started</button>
+        </div>
       </section>
       <!-- last section  -->
       <section class="bg-accent-400 text-neutral-100 padding-block-700 cta">
